<resources>
    <string name="button_retry">Retry</string>
    <string name="app_name">Meta Chat</string>


    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="FullName">Email</string>

    <string name="not_actual_age">Not the actual age</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>


    <string name="error_contact_support_team">Please contact the support team to update Pathone</string>
    <string name="hint_full_Name">Enter a new full Name</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>


    <string name="wrong_password">Password must be at lest 8 character </string>
    <string name="wrong_email">please enter valid email</string>
    <string name="wrong_phone">please enter valid phone number</string>
    <string name="password_not_match">Password not match </string>
    <string name="repassword">Confirm Password</string>
    <string name="repassword_wrong">Password not matching </string>
    <string name="wrong_full_name">please fill full name in correct way</string>
    <string name="logout">logout</string>
    <string name="about_us">About Us</string>
    <string name="report_us">Report Us</string>
    <string name="lost_items">Lost Items</string>
    <string name="links">Links</string>
    <string name="add">Add</string>
    <string name="Uploading">Uploading…</string>
    <string name="email">email</string>

    <string-array name="sp_reasons_array_list">
        <item>Bug Reports</item>
        <item>User Reports</item>
        <item>General Reports</item>
        <item>Technical Suggestions</item>
        <item>University Suggestions</item>
        <item>General Suggestions</item>
    </string-array>
    <string name="type_a_message">Type a message</string>


    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string-array name="theme_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>Default</item>
    </string-array>

    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
        <item>default</item>
    </string-array>


    <string name="language">Language</string>
    <string-array name="language_entries">
        <item>English</item>
        <item>Arabic</item>
        <item>Default</item>
    </string-array>
    <string-array name="language_values">
        <item>en</item>
        <item>ar</item>
        <item>default</item>
    </string-array>

    <string name="shared_default">default</string>


    <string name="notification">Notification</string>
    <string name="enable_notification">enable notification</string>

    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    <string name="submit">submit</string>
    <string name="label_force_update_title">Download New Version</string>
    <string name="label_force_update_message">Brand new version is more reliable, faster and enhanced performance</string>
    <string name="button_download">Download</string>
    <string name="label_current_version">Current Version is %s</string>
    <string name="label_maintenance_title">Under Maintenance</string>
    <string name="label_maintenance_message">We are currently undergoing maintenance.\nThis won\'t take long.</string>
    <string name="button_back_later">Back Later</string>
    <string name="image_chooser">Add Images</string>
    <string name="dialog_camcorder_capture_option">Camera</string>
    <string name="dialog_camcorder_option">Studio</string>
    <string name="label_new_version">New Version is %s</string>
    <string name="join">join</string>
    <string name="sure_join">you sure to join</string>
    <string name="sure_leave">you sure to leave</string>
    <string name="sure_delete">you sure to delete</string>
    <string name="post_lorem">Test TEst Lorem Text</string>
    <string name="your_mind">What\'s in your mind</string>

    <string name="close_navigation_drawer">close navigation drawer</string>
    <string name="open_navigation_drawer">open navigation drawer</string>
    <string name="all_messaga">These are all messages</string>
    <string name="more">More</string>
    <string name="people">People</string>
    <string name="chat">Chat</string>
    <string name="room">Room</string>
    <string name="post">Post</string>
    <string name="share">share</string>
    <string name="create_room_private">create room private</string>
    <string name="create_room_public">create room public</string>
    <string name="friends">Friends</string>
    <string name="info_user">info user</string>
    <string name="update_profile">update Profile</string>
    <string name="create_room">create room</string>
    <string name="other">Other</string>
    <string name="security_Fragment">Security</string>
    <string name="privacy">Privacy</string>
    <string name="contact_us">"Contact Us "</string>
    <string name="force_update">Force Update</string>
    <string name="confirm_dialog">"Confirm "</string>
    <string name="new_post">New Post</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_chose">Please Chose Image and name to your room</string>
    <string name="room_name">Room Name</string>
    <string name="create">create</string>
    <string name="jokes">نكت لبنانيه</string>
    <string name="message_requests">Message requests</string>
    <string name="found_people_to_contact_n_with_them">Found people to contact \n with them</string>
    <string name="explore">Explore</string>
    <string name="update_profle">update Profle</string>
    <string name="from_where">From where</string>
    <string name="how_older_you">How old are you</string>
    <string name="ok">Continue</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="please_wait">Please Wait…</string>
    <string name="like">Like</string>
    <string name="you_can_change_name">You can only change a name once</string>
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_post">Delete Post</string>
    <string name="your_age">Your age</string>
    <string name="place_of_living">Place of living</string>
    <string name="you_can_change">You can change your name and photo only once</string>
    <string name="titile_updated_successfully">Updated successfully</string>
    <string name="updated_successfully">Updated successfully \n you can only change your update information once</string>
    <string name="post_hidden">Post Hidden</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="emptyPost">There are no post</string>
    <string name="emptyName">There are no name</string>
    <string name="hide_post">Hide Post</string>
    <string name="view_post">View Post</string>
    <string name="location">Selecte Location</string>
    <string name="select_cities">Select Cities</string>
    <string name="write_your_information">Fill in your information</string>
    <string name="birthdate">Birth Date</string>
    <string name="delete">delete</string>
    <string name="public_room">Public</string>
    <string name="private_room">Private</string>
    <string name="say_hi">Say HI !</string>
    <string name="leave">Leave Room</string>
    <string name="read_more">read more ..</string>
    <string name="CantAddEmpty">Can\'t add Empty Post</string>
    <string name="moreLine">It is not possible to add more than one line to the name  </string>
    <string name="alert">Alert</string>
    <string name="NoInternet">no internet</string>
    <string name="date">Date</string>
    <string name="share_room_here">\"Share room here \"</string>
    <string name="no_network">no Network Available</string>
    <string name="cant_hide">Can\'t hide the post</string>
    <string name="post_share">post Share</string>
    <string name="choose_one">choose one</string>
    <string name="chat_bot">Bot Chat</string>
    <string name="chat_images">Bot Images</string>
    <string name="can_request_whatever">You can request whatever you want</string>

</resources>
