<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/account"
        android:title="@string/account">

        <item
            android:id="@+id/mi_profile"
            android:icon="@drawable/ic_person_low"
            android:title="@string/profile" />
        <item
            android:id="@+id/mi_post_hide"
            android:icon="@drawable/ic_post"
            android:title="@string/post_hidden" />
    </group>


    <group
        android:id="@+id/setting"
        android:title="@string/settings">

            <item
                android:id="@+id/im_setting"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/settings" />
            <item
                android:id="@+id/im_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />

            <item
                android:id="@+id/im_privacy"
                android:icon="@drawable/ic_baseline_privacy_tip_24"
                android:title="@string/privacy" />
            <item
                android:id="@+id/im_contact"
                android:icon="@drawable/ic_contact_us"
                android:title="@string/contact_us" />


    </group>


    <item
        android:id="@+id/im_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />


</menu>