<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/splashFragment">
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.zero1tech.chat.ui.splash.SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_friendsFragment2"
            app:destination="@id/friendsFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.zero1tech.chat.ui.setting.about.AboutFragment"
        tools:layout="@layout/fragment_about">
    </fragment>

    <fragment
        android:id="@+id/peopleFragment"
        android:name="com.zero1tech.chat.ui.people.PeopleFragment"
        android:label="@string/people"
        tools:layout="@layout/fragment_people">
        <action
            android:id="@+id/action_peopleFragment2_to_chatFragment"
            app:destination="@id/chatFragment" />
        <action
            android:id="@+id/action_peopleFragment_to_searchPeopleFragment"
            app:destination="@id/searchPeopleFragment"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/slide_out_up"
            app:popEnterAnim="@anim/slide_in_up"
            app:popExitAnim="@anim/slide_out_up" />
    </fragment>
    <fragment
        android:id="@+id/friendsFragment"
        android:name="com.zero1tech.chat.ui.friends.FriendsFragment"
        android:label="@string/friends"
        tools:layout="@layout/fragment_friends">
        <action
            android:id="@+id/action_friendsFragment2_to_chatFragment"
            app:destination="@id/chatFragment" />
        <action
            android:id="@+id/action_friendsFragment_to_imagesFragment"
            app:destination="@id/imagesFragment" />
        <action
            android:id="@+id/action_friendsFragment_to_chatBotFragment"
            app:destination="@id/chatBotFragment" />

        <action
            android:id="@+id/action_friendsFragment_to_infoDialog"
            app:destination="@id/infoDialog" />
        <argument
            android:name="AccountType"
            android:defaultValue='""'
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_friendsFragment_to_requestFragment"
            app:destination="@id/requestFragment" />
        <action
            android:id="@+id/action_friendsFragment_to_requestFragment2"
            app:destination="@id/requestFragment" />
        <action
            android:id="@+id/action_friendsFragment_to_peopleFragment"
            app:destination="@id/peopleFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.zero1tech.chat.ui.chat.friend.ChatFragment">
        <argument
            android:name="user"
            app:argType="com.example.data.model.UserRemote"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="fromSuggest"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="flag"
            android:defaultValue="notification"
            app:argType="string" />
        <action
            android:id="@+id/action_chatFragment_to_friendsFragment"
            app:destination="@id/friendsFragment" />
        <action
            android:id="@+id/action_chatFragment_to_friendsFragment2"
            app:popUpTo="@id/friendsFragment" />
        <argument
            android:name="receiverID"
            android:defaultValue="null"
            app:argType="string"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/imagesFragment"
        android:name="com.zero1tech.chat.ui.chat.gpt.images.ImagesBotFragment">
        <argument
            android:name="user"
            android:defaultValue="@null"
            app:argType="com.example.data.model.UserRemote"
            app:nullable="true" />
        <argument
            android:name="fromSuggest"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="flag"
            android:defaultValue="notification"
            app:argType="string" />
        <action
            android:id="@+id/action_chatFragment_to_friendsFragment"
            app:destination="@id/friendsFragment" />
        <action
            android:id="@+id/action_chatFragment_to_friendsFragment2"
            app:popUpTo="@id/friendsFragment" />
        <argument
            android:name="receiverID"
            android:defaultValue="null"
            app:argType="string"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/chatBotFragment"
        android:name="com.zero1tech.chat.ui.chat.gpt.completion.ChatBotFragment">
        <argument
            android:name="user"
            android:defaultValue="@null"
            app:argType="com.example.data.model.UserRemote"
            app:nullable="true" />
        <argument
            android:name="fromSuggest"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="flag"
            android:defaultValue="notification"
            app:argType="string" />
        <action
            android:id="@+id/action_chatFragment_to_friendsFragment"
            app:destination="@id/friendsFragment" />
        <action
            android:id="@+id/action_chatFragment_to_friendsFragment2"
            app:popUpTo="@id/friendsFragment" />
        <argument
            android:name="receiverID"
            android:defaultValue="null"
            app:argType="string"
            app:nullable="true" />

    </fragment>



    <action
        android:id="@+id/action_global_requestFragment"
        app:destination="@id/requestFragment" />
    <action
        android:id="@+id/action_global_dialog"
        app:destination="@id/infoDialog" />
    <action
        android:id="@+id/action_global_to_room_chat"
        app:destination="@id/infoDialog" />

    <dialog
        android:id="@+id/infoDialog"
        android:name="com.zero1tech.chat.ui.dialog.InfoDialog"
        android:label="@string/info_user"
        tools:layout="@layout/info_dialog" >
        <argument
            android:name="cities"
            app:argType="string[]"
            app:nullable="true" />
    </dialog>
    <fragment
        android:id="@+id/updateProfileFragment"
        android:name="com.zero1tech.chat.ui.setting.updateprofiledialog.UpdateProfileFragment"
        android:label="@string/update_profile"
        tools:layout="@layout/update_profile_fragment" >
    </fragment>

    <dialog
        android:id="@+id/createRoomDialog2"
        android:name="com.zero1tech.chat.ui.room.roomdialog.CreateRoomDialog"
        android:label="@string/create_room"
        tools:layout="@layout/create_room_dialog" >
        <argument
            android:name="roomType"
            app:argType="string" />
        <argument
            android:name="roomNames"
            app:argType="string[]" />
    </dialog>

    <fragment
        android:id="@+id/requestFragment"
        android:name="com.zero1tech.chat.ui.friends.request.RequestFragment"
        android:label="@string/other"
        tools:layout="@layout/fragment_request">
        <action
            android:id="@+id/action_requestFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/roomFragment"
        android:name="com.zero1tech.chat.ui.room.RoomFragment"
        android:label="@string/room">
        <action
            android:id="@+id/action_roomFragment_to_roomChatFragment"
            app:destination="@id/roomChatFragment" />
        <action
            android:id="@+id/action_roomFragment_to_createRoomDialog2"
            app:destination="@id/createRoomDialog2" />
        <action
            android:id="@+id/action_roomFragment_to_confirmDialog"
            app:destination="@id/confirmDialog" />
    </fragment>


    <fragment
        android:id="@+id/settingFragment"
        android:name="com.zero1tech.chat.ui.setting.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/roomChatFragment"
        android:name="com.zero1tech.chat.ui.room.chat.RoomChatFragment">

        <action
            android:id="@+id/action_roomChatFragment_to_roomFragment"
            app:destination="@id/roomFragment" />
        <argument
            android:name="room"
            app:argType="com.example.data.model.RoomModel"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_roomChatFragment_to_confirmDialog"
            app:destination="@id/confirmDialog" />
        <argument
            android:name="isJoined"
            app:argType="boolean" />
    </fragment>

    <fragment
        android:id="@+id/privacyFragment"
        android:name="com.zero1tech.chat.ui.setting.privacy.PrivacyFragment"
        android:label="@string/privacy" />
    <fragment
        android:id="@+id/contactUsFragment"
        android:name="com.zero1tech.chat.ui.setting.contactus.ContactUsFragment"
        android:label="@string/contact_us" />
    <fragment
        android:id="@+id/forceUpdateFragment"
        android:name="com.zero1tech.chat.ui.splash.update.ForceUpdateFragment"
        android:label="@string/force_update" />
    <fragment
        android:id="@+id/maintenanceFragment"
        android:name="com.zero1tech.chat.ui.splash.maintenance.MaintenanceFragment"
        android:label="MaintenanceFragment" />
    <dialog
        android:id="@+id/confirmDialog"
        android:name="com.zero1tech.chat.ui.room.roomdialog.ConfirmDialog"
        android:label="@string/confirm_dialog"
        tools:layout="@layout/confirm_dialog" >
        <argument
            android:name="action"
            app:argType="string" />
        <argument
            android:name="room"
            app:argType="com.example.data.model.RoomModel"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_confirmDialog_to_roomChatFragment"
            app:destination="@id/roomChatFragment" />
        <action
            android:id="@+id/action_confirmDialog_to_roomFragment"
            app:destination="@id/roomFragment" />
        <argument
            android:name="isJoined"
            app:argType="boolean"
            android:defaultValue="true" />
        <argument
            android:name="roomName"
            app:argType="string" />
        <argument
            android:name="roomType"
            app:argType="string"
            android:defaultValue="private" />
        <argument
            android:name="numberUsersInRoom"
            app:argType="integer"
            android:defaultValue="-1" />
    </dialog>
    <fragment
        android:id="@+id/postFragment"
        android:name="com.zero1tech.chat.ui.post.PostFragment"
        android:label="@string/post"
        tools:layout="@layout/fragment_post" />
    <fragment
        android:id="@+id/addPostFragment"
        android:name="com.zero1tech.chat.ui.post.AddPostFragment"
        android:label="@string/new_post"
        tools:layout="@layout/fragment_add_post" />
    <fragment
        android:id="@+id/postHiddenFragment"
        android:name="com.zero1tech.chat.ui.post.PostHiddenFragment"
        android:label="Post hidden"
        tools:layout="@layout/fragment_post_hidden" />
    <fragment
        android:id="@+id/searchPeopleFragment"
        android:name="com.zero1tech.chat.ui.people.search.SearchPeopleFragment"
        android:label="Search People"
        tools:layout="@layout/fragment_search_people">
        <action
            android:id="@+id/action_searchPeopleFragment_to_chatFragment"
            app:destination="@id/chatFragment"
            />
    </fragment>


</navigation>