<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.post.AddPostFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_add_post"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_default_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_add_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/jokes"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_add_post"
        app:layout_constraintStart_toEndOf="@id/iv_add_post"
        app:layout_constraintTop_toTopOf="@id/iv_add_post" />

    <Button
        android:id="@+id/btn_post_add_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="@id/iv_add_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_add_post" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_content_post"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="7dp"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/your_mind"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_post_add_post" />

</androidx.constraintlayout.widget.ConstraintLayout>