<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/im_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_delete_post" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/delete_post" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/im_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_hiden" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/hide_post" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/im_view_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_post" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/view_post" />
    </LinearLayout>

</LinearLayout>